--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: python
 python:
   - "3.7-dev"
 install:
-  - pipenv install Pipfile
+  - 'pip install pipenv'
+  - 'pipenv sync'
 script: python -m unittest --verbose
