--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,7 +4,7 @@ build:
   image: latest
 
 python:
-  version: 3.7
+  version: 3.7-dev
   pip_install: true
   setup_py_install: true
   extra_requirements:
