--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ xmltodict = "*"
 pre-commit = "*"
 sphinx = "*"
 sphinxcontrib-napoleon = "*"
+"flake8" = "*"
 
 [requires]
 python_version = "3.7"
