--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pre-commit = "*"
 sphinx = "*"
 sphinxcontrib-napoleon = "*"
 "flake8" = "*"
+recommonmark = "*"
 
 [requires]
 python_version = "3.7"
